<resources>
    <string name="app_name">Odev3</string>
    <string name="lemonade_name">Lemonade</string>
    <string name="lemonade_size">Size: 10 cl</string>
    <string name="lemonade_price">$1.50</string>
    <string name="detox_name">Detox Drink</string>
    <string name="detox_size">Size: 35.5 cl</string>
    <string name="detox_price">$3.55</string>
    <string name="tea_name">Ice Tea</string>
    <string name="tea_size">Size: 50 cl</string>
    <string name="tea_price">$2.00</string>
    <string name="orange_name"> Orange Juice</string>
    <string name="orange_size">Size: 25 cl</string>
    <string name="orange_price">$2.50</string>
    <string name="hello_user">Hello Darlene</string>
    <string name="drinks">Drinks</string>
    <string name="food">Food</string>
    <string name="health">Health</string>
    <string name="gaming">Gaming</string>
    <string name="find_results">Find Results (242)</string>
    <string name="_242_items">(242) items</string>
    <string name="see_all">See All</string>
    <string name="for_menu">for menu</string>
</resources>