<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/tv_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/source_sans_pro"
        android:text="@string/hello_user"
        android:textColor="@color/textColor1"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/guideline_left"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imageBtn_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/backgroundColor"
        android:clickable="false"
        android:contentDescription="@string/for_menu"
        android:src="@android:drawable/ic_menu_sort_by_size"
        app:layout_constraintEnd_toEndOf="@id/guideline_right"
        app:layout_constraintTop_toTopOf="parent" />

    <SearchView
        android:id="@+id/sv_search_products"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/yellow"
        android:iconifiedByDefault="false"
        android:queryHint="Search products"
        app:layout_constraintEnd_toEndOf="@id/guideline_right"
        app:layout_constraintStart_toStartOf="@id/guideline_left"
        app:layout_constraintTop_toBottomOf="@id/tv_user" />

    <com.google.android.material.chip.Chip
        android:layout_marginStart="8dp"
        android:id="@+id/chip_drink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/yellowDark"
        android:fontFamily="@font/source_sans_pro"
        android:text="@string/drinks"
        android:textAlignment="center"
        android:textColor="@color/textColor1"
        android:textSize="14sp"
        app:chipStrokeColor="@color/yellowDark"
        app:chipStrokeWidth="2dp"
        app:layout_constraintStart_toStartOf="@id/guideline_left"
        app:layout_constraintTop_toBottomOf="@id/sv_search_products" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chip_food"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/yellow"
        android:fontFamily="@font/source_sans_pro"
        android:text="@string/food"
        android:textAlignment="center"
        android:textColor="@color/textColor1"
        android:textSize="14sp"
        app:chipStrokeColor="@color/yellowDark"
        app:chipStrokeWidth="2dp"
        app:layout_constraintStart_toEndOf="@id/chip_drink"
        app:layout_constraintTop_toBottomOf="@id/sv_search_products" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chip_health"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/yellow"
        android:fontFamily="@font/source_sans_pro"
        android:text="@string/health"
        android:textAlignment="center"
        android:textColor="@color/textColor1"
        android:textSize="14sp"
        app:chipStrokeColor="@color/yellowDark"
        app:chipStrokeWidth="2dp"
        app:layout_constraintStart_toEndOf="@id/chip_food"
        app:layout_constraintTop_toBottomOf="@id/sv_search_products" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chip_gaming"
        android:layout_width="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/yellow"
        android:fontFamily="@font/source_sans_pro"
        android:text="@string/gaming"
        android:textColor="@color/textColor1"
        android:textSize="14sp"
        app:chipStrokeColor="@color/yellowDark"
        app:chipStrokeWidth="2dp"
        app:layout_constraintStart_toEndOf="@id/chip_health"
        app:layout_constraintTop_toBottomOf="@id/sv_search_products" />


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_marginTop="8dp"
        android:id="@+id/ll_products_filter"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/guideline_right"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/guideline_left"
        app:layout_constraintTop_toBottomOf="@id/chip_drink">

        <TextView
            android:layout_marginStart="8dp"
            android:id="@+id/tv_find_results"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/source_sans_pro"
            android:text="@string/find_results"
            android:textColor="@color/textColor1"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/tv_item_count"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/chip_drink" />



        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/see_all"
            android:textColor="@color/yellowDark"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_item_count"
            app:layout_constraintTop_toBottomOf="@id/chip_drink" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_marginTop="8dp"
        android:id="@+id/cl_products"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/guideline_right"
        app:layout_constraintStart_toStartOf="@id/guideline_left"
        app:layout_constraintTop_toBottomOf="@id/ll_products_filter">

        <ImageView
            android:id="@+id/iv_detox"
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/detox"
            android:contentDescription="@string/detox_name"/>

        <TextView
            android:id="@+id/tv_detox_name"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/detox_name"
            android:textAlignment="center"
            android:textColor="@color/textColor1"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_detox" />
        <TextView
            android:id="@+id/tv_detox_size"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/detox_size"
            android:textAlignment="center"
            android:textColor="@color/textColor1"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_detox_name" />
        <TextView
            android:id="@+id/tv_detox_price"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/detox_price"
            android:textAlignment="center"
            android:textColor="@color/yellowDark"
            android:textSize="20sp"
            android:textStyle="bold"
           app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_detox_size" />

        <ImageView
            android:id="@+id/iv_lemonade"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginEnd="25dp"
            app:layout_constraintEnd_toStartOf="@+id/iv_detox"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/lemonade"
            android:contentDescription="@string/lemonade_name"/>

        <TextView
            android:id="@+id/tv_lemonade_name"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="25dp"
            android:text="@string/lemonade_name"
            android:textAlignment="center"
            android:textColor="@color/textColor1"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/tv_detox_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_lemonade" />

        <TextView
            android:id="@+id/tv_lemonade_size"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="25dp"
            android:text="@string/lemonade_size"
            android:textAlignment="center"
            android:textColor="@color/textColor1"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/tv_detox_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_lemonade_name" />

        <TextView
            android:id="@+id/tv_lemonade_price"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="25dp"
            android:text="@string/lemonade_price"
            android:textAlignment="center"
            android:textColor="@color/yellowDark"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/tv_detox_price"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_lemonade_size" />

        <ImageView
            android:id="@+id/iv_tea"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginEnd="25dp"
            app:layout_constraintEnd_toStartOf="@+id/iv_orange_juice"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_lemonade_price"
            app:srcCompat="@drawable/ice_tea"
            android:contentDescription="@string/tea_name"/>

        <TextView
            android:id="@+id/tv_teaName"
            android:layout_width="151dp"
            android:layout_height="25dp"
            android:layout_marginEnd="25dp"
            android:text="@string/tea_name"
            android:textAlignment="center"
            android:textColor="@color/textColor1"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/tv_orange_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_tea" />

        <TextView
            android:id="@+id/tv_tea_size"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="25dp"
            android:text="@string/tea_size"
            android:textAlignment="center"
            android:textColor="@color/textColor1"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/tv_orange_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_teaName" />

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="25dp"
            android:text="@string/tea_price"
            android:textAlignment="center"
            android:textColor="@color/yellowDark"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/textView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_tea_size" />

        <ImageView
            android:id="@+id/iv_orange_juice"
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:srcCompat="@drawable/orange_juice"
            app:layout_constraintTop_toBottomOf="@id/tv_detox_price"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/orange_name"/>
        <TextView
            android:id="@+id/tv_orange_name"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/iv_orange_juice"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/orange_name"
            android:textAlignment="center"
            android:textColor="@color/textColor1"
            android:textSize="16sp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/tv_orange_size"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_orange_name"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/orange_size"
            android:textAlignment="center"
            android:textColor="@color/textColor1"
            android:textSize="12sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/textView"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/orange_price"
            android:textAlignment="center"
            android:textColor="@color/yellowDark"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_orange_size" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />


</androidx.constraintlayout.widget.ConstraintLayout>